--- a/about.html
+++ b/about.html
@@ -7,8 +7,10 @@
     <title>AboutPage</title>
   </head>
   <body>
+    <!-- Coffee logo -->
     <img src="./images/logo.png" alt="coffe logo" />
 
+    <!-- Navigations -->
     <h1 id="About">About</h1>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -17,8 +19,10 @@
       <li><a href="contact.html">Contacts</a></li>
     </ul>
 
+    <!-- backgorung cofee logo -->
     <img src="./images/background.jpeg" alt="Backgroung Image" />
 
+    <!-- About us page description -->
     <h3>About Us</h3>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum
@@ -44,8 +48,10 @@
     <br />
     <br />
 
+    <!-- Copyright -->
     <p>copyright &copy;2020</p>
 
+    <!-- Back to top -->
     <h3><a href="#About">Back to Top</a></h3>
   </body>
 </html>
