--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Coffee project</title>
   </head>
   <body>
+    <!-- Cofee logo -->
     <img src="./images/logo.png" alt="coffee logo" />
+
+    <!-- Navigations -->
     <h1 id="coffee">Coffee Junkie</h1>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -18,10 +21,11 @@
 
     <img src="./images/background.jpeg" alt="Coffee beans" />
 
+    <!-- Feature product -->
     <h2>Featured Products</h2>
     <br />
     <br />
-
+    <!-- House Blend Coffee -->
     <h3>House Blend Coffee</h3>
     <img src="./images/house-blend.jpeg" alt="House blend" />
     <p>
@@ -38,6 +42,7 @@
     </p>
     <a href="https://en.wikipedia.org/wiki/Coffee">Details</a>
 
+    <!-- Frech ROast -->
     <h3>French Roast</h3>
     <img src="./images/french-roast.jpeg" alt="Frech Roast" />
     <p>
@@ -54,6 +59,7 @@
     </p>
     <a href="https://en.wikipedia.org/wiki/Coffee">Details</a>
 
+    <!-- Columbian ROast -->
     <h3>Columbian Roast</h3>
     <img src="./images/columbian-roast.jpeg" alt="Columbian Roast" />
     <p>
@@ -75,8 +81,10 @@
     <br />
     <br />
 
+    <!-- Copyright -->
     <p>copyright &copy;2020</p>
 
+    <!-- Back to top -->
     <h3><a href="#coffee">Back to Top</a></h3>
   </body>
 </html>
