--- a/numbers.html
+++ b/numbers.html
@@ -7,8 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- coffee logo -->
     <img src="./images/logo.png" alt="coffe logo" />
 
+    <!-- navigations -->
     <h1 id="numbers">Numbers</h1>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -17,8 +19,10 @@
       <li><a href="contact.html">Contacts</a></li>
     </ul>
 
+    <!-- Backgroung image -->
     <img src="./images/background.jpeg" alt="Backgroung Image" />
 
+    <!-- table -->
     <h3>Our Stores</h3>
     <table style="border: 2px solid black; border-spacing: 25px">
       <tr>
@@ -52,8 +56,10 @@
     <br />
     <br />
 
+    <!-- copyright -->
     <p>copyright &copy;2020</p>
 
+    <!-- Back to top -->
     <h3><a href="#numbers">Back to Top</a></h3>
   </body>
 </html>
