--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <body>
     <img src="./images/logo.png" alt="coffe logo" />
 
+    <!-- navigation -->
     <h1 id="contact">Contact</h1>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -19,8 +20,22 @@
 
     <img src="./images/background.jpeg" alt="Backgroung Image" />
 
+    <!-- contact -->
     <h3>Contact</h3>
 
+    <!-- contact name -->
+    <label for="name">Name</label>
+    <input type="name" name="name" id="name" placeholder="name" />
+    <br />
+    <!-- contact email -->
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email" placeholder="email" />
+
+    <br />
+    <!-- description -->
+    <p>Description</p>
+    <textarea name="decription" id="decription" cols="30" rows="10"></textarea>
+
     <br />
     <br />
     <br />
@@ -32,8 +47,10 @@
     <br />
     <br />
 
+    <!-- copyright -->
     <p>copyright &copy;2020</p>
 
-    <h3><a href="#numbers">Back to Top</a></h3>
+    <!-- back to top of page -->
+    <h3><a href="#contact">Back to Top</a></h3>
   </body>
 </html>
